--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "jm3",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "gh-pages": "^0.12.0",
-    "npm-run-all": "^4.0.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-scripts": "0.9.5"
-  },
+  "devDependencies": {},
   "dependencies": {
+    "gh-pages": "^0.12.0",
     "moment": "^2.18.1",
-    "react": "^15.4.2",
-    "react-custom-scrollbars": "^4.0.2",
-    "react-dom": "^15.4.2",
-    "react-motion": "^0.4.7",
-    "react-router-dom": "^4.0.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-motion": "^0.5.0",
+    "react-router-dom": "^4.1.1",
     "react-router-transition": "0.0.6",
-    "react-typewriter": "^0.4.1"
+    "react-scripts": "^0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
