--- a/package.json
+++ b/package.json
@@ -4,94 +4,41 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"build": "webpack --config ./webpack/webpack.production.js",
-		"dev": "webpack-dev-server --config ./webpack/webpack.development.js",
 		"precommit": "pretty-quick --staged",
 		"prettier": "prettier --write 'src/**/*.{js,jsx,less,css}'",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"deploy": "gh-pages -d dist",
+		"serve": "cd dist; live-server",
+		"build:prod": "node build/prod.js",
+		"build:dev": "node build/dev.js",
+		"start": "stmux [ \"npm run build:dev\" : \"npm run serve\" ]"
 	},
 	"dependencies": {
-		"i18next": "^15.0.9",
-		"i18next-browser-languagedetector": "^3.0.1",
-		"i18next-localstorage-cache": "^1.1.1",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^5.2.0",
 		"react-spring": "^8.0.19",
 		"react-svg-path": "^1.11.1",
-		"tachyons": "^4.11.1"
+		"tachyons": "^4.12.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.4.3",
-		"@babel/plugin-proposal-class-properties": "^7.4.0",
-		"@babel/plugin-proposal-decorators": "^7.4.0",
-		"@babel/plugin-proposal-do-expressions": "^7.2.0",
-		"@babel/plugin-proposal-export-default-from": "^7.2.0",
-		"@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-		"@babel/plugin-proposal-function-bind": "^7.2.0",
-		"@babel/plugin-proposal-function-sent": "^7.2.0",
-		"@babel/plugin-proposal-json-strings": "^7.2.0",
-		"@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
-		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.3",
-		"@babel/plugin-proposal-numeric-separator": "^7.2.0",
-		"@babel/plugin-proposal-optional-catch-binding": "^7.2.0",
-		"@babel/plugin-proposal-optional-chaining": "^7.2.0",
-		"@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-		"@babel/plugin-proposal-throw-expressions": "^7.2.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/plugin-syntax-import-meta": "^7.2.0",
-		"@babel/plugin-transform-runtime": "^7.4.3",
-		"@babel/preset-env": "^7.4.3",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/runtime": "^7.4.3",
-		"@hot-loader/react-dom": "^16.8.6",
-		"autoprefixer": "^9.5.1",
-		"babel-eslint": "^10.0.1",
-		"babel-jest": "^24.7.1",
-		"babel-loader": "^8.0.5",
-		"case-sensitive-paths-webpack-plugin": "^2.2.0",
-		"clean-webpack-plugin": "^2.0.1",
-		"copy-webpack-plugin": "^5.0.2",
-		"css-loader": "^2.1.1",
-		"cssnano": "^4.1.10",
-		"eslint": "^5.16.0",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-config-react-app": "^3.0.8",
-		"eslint-loader": "^2.1.2",
-		"eslint-plugin-import": "^2.17.2",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.12.4",
-		"eslint-plugin-react-hooks": "^1.6.0",
-		"eventsourcemock": "^2.0.0",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^3.0.1",
-		"gh-pages": "^2.0.1",
-		"html-webpack-plugin": "^3.2.0",
-		"husky": "^1.3.1",
-		"identity-obj-proxy": "^3.0.0",
-		"less": "^3.9.0",
-		"less-loader": "^4.1.0",
-		"mini-css-extract-plugin": "^0.6.0",
-		"mock-local-storage": "^1.1.8",
-		"postcss-flexbugs-fixes": "^4.1.0",
-		"postcss-import": "^12.0.1",
-		"postcss-loader": "^3.0.0",
-		"postcss-nesting": "^7.0.0",
-		"postcss-preset-env": "^6.6.0",
-		"precss": "^4.0.0",
-		"prettier": "^1.17.0",
-		"pretty-quick": "^1.10.0",
+		"@deanc/esbuild-plugin-postcss": "^1.0.1",
+		"babel-eslint": "^10.1.0",
+		"esbuild": "^0.11.12",
+		"eslint": "^7.24.0",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-config-react-app": "^6.0.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"gh-pages": "^3.1.0",
+		"live-server": "^1.2.1",
+		"postcss-nesting": "^7.0.1",
+		"postcss-preset-env": "^6.7.0",
+		"prettier": "^2.2.1",
+		"pretty-quick": "^3.1.0",
 		"prop-types": "^15.7.2",
-		"raf": "^3.4.1",
-		"react-hot-loader": "^4.8.4",
-		"react-router-dom": "^5.2.0",
-		"style-loader": "^0.23.1",
-		"style-resources-loader": "^1.2.1",
-		"terser-webpack-plugin": "^1.2.3",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.30.0",
-		"webpack-cli": "^3.3.1",
-		"webpack-dev-server": "^3.11.2",
-		"webpack-merge": "^4.2.1"
+		"stmux": "^1.8.1"
 	}
 }
