--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"gh-pages": "^3.1.0",
+		"husky": "^6.0.0",
 		"live-server": "^1.2.1",
 		"postcss-nesting": "^7.0.1",
 		"postcss-preset-env": "^6.7.0",
