--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,14 +1,12 @@
 {
-	"compilerOptions": {
-		"target": "es5",
-		"module": "system",
-		"sourceMap": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"removeComments": false,
-		"noImplicitAny": false
-	},
-	"exclude": [
-		"node_modules"
-	]
+    "compilerOptions": {
+        "target": "es5",
+        "module": "system",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "removeComments": false,
+        "noImplicitAny": false
+    },
+    "exclude": ["node_modules"]
 }
