--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"blog:prod": "slinkity"
 	},
 	"dependencies": {
+		"luxon": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.0.2",
