--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"build": "slinkity"
 	},
 	"dependencies": {
-		"luxon": "^2.1.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-spring": "^9.3.2",
@@ -30,6 +29,7 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"gh-pages": "^3.1.0",
+		"html-minifier": "^4.0.0",
 		"husky": "^6.0.0",
 		"prettier": "^2.2.1",
 		"pretty-quick": "^3.1.0",
