--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.0-beta.8",
+		"@11ty/eleventy-img": "^1.0.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^7.24.0",
