--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"build": "slinkity"
 	},
 	"dependencies": {
+		"dagre": "^0.8.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-spring": "^9.3.2",
