--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@11ty/eleventy": "^1.0.0-beta.8",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
 		"babel-eslint": "^10.1.0",
+		"eleventy-plugin-seo": "^0.5.2",
 		"eslint": "^7.24.0",
 		"eslint-config-prettier": "^8.2.0",
 		"eslint-config-react-app": "^6.0.0",
