--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^1.0.0-beta.8",
+		"@11ty/eleventy-img": "^2.0.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
 		"babel-eslint": "^10.1.0",
 		"eleventy-plugin-seo": "^0.5.2",
