--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"dagre": "^0.8.5",
+		"gridset": "^1.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-spring": "^9.3.2",
