--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "astro preview",
     "astro": "astro",
     "predeploy": "npm run build && npm run build",
-		"deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "git": "git add . && git commit -m",
-		"postgit": "git push --all"
+    "postgit": "git push --all"
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.5.6",
@@ -21,6 +21,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.4",
+    "astro-expressive-code": "^0.41.3",
     "dagre": "^0.8.5",
     "gh-pages": "^6.3.0",
     "gridset": "^1.0.5",
