--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/react": "^4.3.0",
     "@babel/runtime": "^7.28.2",
     "@joemaddalone/path": "^1.4.0",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.4",
@@ -29,6 +30,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-spring": "^10.0.1",
-    "react-svg-path": "^1.15.0"
+    "react-svg-path": "^1.15.0",
+    "tailwindcss": "^4.1.12"
   }
 }
