--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "@types/react-dom": "^19.1.7",
     "astro": "^5.12.4",
     "astro-expressive-code": "^0.41.3",
+    "astro-icon": "^1.1.5",
     "dagre": "^0.8.5",
     "gh-pages": "^6.3.0",
     "gridset": "^1.0.5",
     "motion": "^12.23.12",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-activity-calendar": "^3.0.2",
     "react-dom": "^19.1.1",
     "react-svg-path": "^1.15.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
